--- a/Twitter/Base.lproj/Main.storyboard
+++ b/Twitter/Base.lproj/Main.storyboard
@@ -58,11 +58,11 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="tweetCell" rowHeight="120" id="IcH-HV-oL8" customClass="TweetCellTableViewCell" customModule="Twitter" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="28" width="414" height="120"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="tweetCell" rowHeight="150" id="IcH-HV-oL8" customClass="TweetCellTableViewCell" customModule="Twitter" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="28" width="414" height="150"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="IcH-HV-oL8" id="w5f-QQ-4xd">
-                                    <rect key="frame" x="0.0" y="0.0" width="414" height="120"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="150"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="irt-pI-IpM">
@@ -84,13 +84,47 @@
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
+                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="scx-At-TmZ">
+                                            <rect key="frame" x="354" y="119" width="30" height="30"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="30" id="KEu-4v-Urb"/>
+                                                <constraint firstAttribute="width" constant="30" id="yHY-J1-m1u"/>
+                                            </constraints>
+                                            <state key="normal" title="favButton" image="favor-icon"/>
+                                            <connections>
+                                                <action selector="favoriteTweet:" destination="IcH-HV-oL8" eventType="touchUpInside" id="0jg-Fm-0W9"/>
+                                            </connections>
+                                        </button>
+                                        <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="j1a-Gl-69m">
+                                            <rect key="frame" x="310" y="119" width="30" height="30"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" relation="lessThanOrEqual" constant="30" id="3Z2-IC-obO"/>
+                                                <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="30" id="Jre-vx-7mz"/>
+                                                <constraint firstAttribute="width" constant="30" id="TM9-hz-efv"/>
+                                                <constraint firstAttribute="width" relation="lessThanOrEqual" constant="30" id="ZTu-CN-akI"/>
+                                                <constraint firstAttribute="width" relation="lessThanOrEqual" constant="30" id="bYm-t1-Mcu"/>
+                                                <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="30" id="nZn-tB-P56"/>
+                                                <constraint firstAttribute="height" constant="30" id="nb3-XO-HJC"/>
+                                            </constraints>
+                                            <state key="normal" title="retweetButton" image="retweet-icon"/>
+                                            <connections>
+                                                <action selector="retweet:" destination="IcH-HV-oL8" eventType="touchUpInside" id="CzF-G2-Vdt"/>
+                                            </connections>
+                                        </button>
                                     </subviews>
                                     <constraints>
+                                        <constraint firstAttribute="bottom" secondItem="j1a-Gl-69m" secondAttribute="bottom" constant="10" id="2aX-5e-Nj1"/>
                                         <constraint firstItem="irt-pI-IpM" firstAttribute="top" secondItem="w5f-QQ-4xd" secondAttribute="topMargin" id="3Gg-9W-dC4"/>
+                                        <constraint firstItem="scx-At-TmZ" firstAttribute="top" secondItem="N6t-a8-reY" secondAttribute="bottom" constant="10" id="3aR-ku-xMv"/>
                                         <constraint firstAttribute="trailingMargin" secondItem="N6t-a8-reY" secondAttribute="trailing" id="6mJ-hJ-PWG"/>
+                                        <constraint firstItem="scx-At-TmZ" firstAttribute="leading" secondItem="j1a-Gl-69m" secondAttribute="trailing" constant="10" id="9pU-kb-W6u"/>
+                                        <constraint firstAttribute="trailingMargin" secondItem="scx-At-TmZ" secondAttribute="trailing" constant="10" id="JiB-Gv-AEH"/>
                                         <constraint firstItem="irt-pI-IpM" firstAttribute="leading" secondItem="w5f-QQ-4xd" secondAttribute="leadingMargin" id="SV5-55-N6h"/>
-                                        <constraint firstItem="N6t-a8-reY" firstAttribute="bottom" secondItem="w5f-QQ-4xd" secondAttribute="bottomMargin" id="Vg4-HN-QNp"/>
+                                        <constraint firstAttribute="bottom" secondItem="j1a-Gl-69m" secondAttribute="bottom" constant="10" id="TKH-sM-IZK"/>
+                                        <constraint firstAttribute="bottom" secondItem="j1a-Gl-69m" secondAttribute="bottom" constant="10" id="ava-6B-YPG"/>
+                                        <constraint firstItem="scx-At-TmZ" firstAttribute="bottom" secondItem="w5f-QQ-4xd" secondAttribute="bottomMargin" constant="10" id="ebC-qC-At2"/>
                                         <constraint firstItem="8Lw-Us-zUN" firstAttribute="leading" secondItem="irt-pI-IpM" secondAttribute="trailing" constant="8" id="gOF-Wu-dc2"/>
+                                        <constraint firstItem="scx-At-TmZ" firstAttribute="bottom" secondItem="w5f-QQ-4xd" secondAttribute="bottomMargin" constant="10" id="k32-7a-gLi"/>
                                         <constraint firstItem="8Lw-Us-zUN" firstAttribute="top" secondItem="w5f-QQ-4xd" secondAttribute="topMargin" id="l2c-4i-bQh"/>
                                         <constraint firstItem="irt-pI-IpM" firstAttribute="top" secondItem="w5f-QQ-4xd" secondAttribute="topMargin" id="pKA-xF-G5p"/>
                                         <constraint firstItem="N6t-a8-reY" firstAttribute="top" secondItem="8Lw-Us-zUN" secondAttribute="bottom" constant="4" id="rMc-rV-P6I"/>
@@ -98,7 +132,9 @@
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
+                                    <outlet property="favButton" destination="scx-At-TmZ" id="Qbf-tn-k2C"/>
                                     <outlet property="profileImageView" destination="irt-pI-IpM" id="5lc-JD-REz"/>
+                                    <outlet property="retweetButton" destination="j1a-Gl-69m" id="eQG-Ki-wj4"/>
                                     <outlet property="tweetContent" destination="N6t-a8-reY" id="0FP-Xv-aiT"/>
                                     <outlet property="userNameLabel" destination="8Lw-Us-zUN" id="qbR-vk-Cvi"/>
                                 </connections>
@@ -126,7 +162,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="aO2-hi-T2E" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1752.8" y="138.98050974512745"/>
+            <point key="canvasLocation" x="1752.1739130434785" y="138.58695652173915"/>
         </scene>
         <!--Tweet View Controller-->
         <scene sceneID="DEH-xu-r0E">
@@ -160,7 +196,7 @@
                                 <action selector="cancel:" destination="lbA-eT-2Xt" id="M2b-fR-0sv"/>
                             </connections>
                         </barButtonItem>
-                        <barButtonItem key="rightBarButtonItem" title="Item" style="plain" id="3FU-cu-aUx" userLabel="Tweet">
+                        <barButtonItem key="rightBarButtonItem" title="Tweet" style="plain" id="3FU-cu-aUx" userLabel="Tweet">
                             <color key="tintColor" red="0.94193143989999994" green="0.96183248960000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                             <connections>
                                 <action selector="tweet:" destination="lbA-eT-2Xt" id="QZJ-cN-P1Z"/>
@@ -215,4 +251,8 @@
             <point key="canvasLocation" x="2444.9275362318845" y="143.47826086956522"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="favor-icon" width="30" height="30"/>
+        <image name="retweet-icon" width="30" height="30"/>
+    </resources>
 </document>
